# django-kubernetes-manager

./: .codeclimate.yml  .flake8  .gitignore  .isort.cfg  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.rst  ReadMe.md  admin.py  db.sqlite3  deployment.py  docker-compose.yml  manage.py  openapi.json  openapi.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py
.circleci/: config.yml
.github/PULL_REQUEST_TEMPLATE/: basic.md
_django/: settings.py  urls.py  wsgi.py
django_kubernetes_manager/: admin.py  apps.py  consts.py  serializers.py  urls.py  utils.py  views.py
django_kubernetes_manager/migrations/: 0001_initial.py  0002_auto_20200221_0009.py  0002_auto_20200402_2355.py  0002_auto_20200403_0822.py  0003_auto_20200403_1847.py  0003_kubernetesjob.py  0004_auto_20200222_0100.py  0005_auto_20200226_1955.py  0006_delete_kubernetestelemetrymixin.py  0007_auto_20200226_2012.py  0008_auto_20200226_2014.py  0009_auto_20200226_2024.py  0010_auto_20200226_2045.py  0011_auto_20200228_0112.py  0012_auto_20200228_0117.py  0013_auto_20200228_0120.py  0014_auto_20200310_1546.py  0015_auto_20200310_1559.py  0016_auto_20200310_1607.py  0017_auto_20200310_2153.py
django_kubernetes_manager/models/: __init__.py  base.py  job.py  k8s_config_map.py  kube.py  mixins.py  target_cluster.py  telemetry_entry.py
django_kubernetes_manager/serializers/: __init__.py  base.py
django_kubernetes_manager/tasks/: cleanup.py  initialize.py
django_kubernetes_manager/tests/: base.py  factories.py  test_cases.py
django_kubernetes_manager/views/: __init__.py  model_views.py
dkm/: asgi.py  settings.py  urls.py  wsgi.py
docs/: conf.py  dkm.rst  index.rst  modules.rst  openapi.json  requirements.txt
docs/source/: api.rst  conf.py  django_kubernetes_manager.models.rst  django_kubernetes_manager.rst  getting_started.rst  index.rst  models.rst  modules.rst  openapi.yml  serializers.rst  utils.rst  views.rst
kubernetes_manager/: __init__.py  admin.py  apps.py  consts.py  urls.py  utils.py
kubernetes_manager/migrations/: 0001_initial.py  0002_auto_20200407_2101.py  0002_auto_20200428_1836.py
kubernetes_manager/models/: __init__.py  base.py  kube.py  mixins.py  target_cluster.py
kubernetes_manager/serializers/: __init__.py  base.py
kubernetes_manager/tests/: factories.py  test_cases.py
licenses/: DJANGO-REST-FRAMEWORK  DRF-YASG
models/: __init__.py  app_config.py  base.py  deployment.py  job_definition.py  job_instance.py  k8s_job.py  log_entry.py
tasks/: __init__.py  status.py
tests/: __init__.py  test_factories.py  test_utils.py
tests/data/: microk8s-kubeconfig
tests/k8s_functionality/: test_job_instance_cleanup.py  test_k8s_client.py  test_k8s_job_no_config_map.py  test_k8s_job_with_config_map.py
tests/models/: test_log_entry.py
(+11 files in other folders)
