[metadata]
name = django-kubernetes-manager
version = 0.2.3
description = A Django app to manage kubernetes clusters and objects.
long_description = file: README.rst
url = https://github.com/IntrospectData/Django-Kubernetes-Manager
author = Bradley Reimers
author_email = bradley@introspectdata.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
include_package_data = true
packages = find:
install_requires =
  django_extensions
  drf-yasg
  djangorestframework
  kubernetes
