[bumpversion]
current_version = 0.4.7
commit = True
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[metadata]
name = django-kubernetes-manager
description = A Django app to manage kubernetes clusters and objects.
long_description = file: README.rst
project_urls = 
	Documentation = https://django-kubernetes-manager.readthedocs.io/en/latest/
	Sponsor = https://introspectdata.com
	Source = https://github.com/IntrospectData/django-kubernetes-manager
	Tracker = https://github.com/IntrospectData/django-kubernetes-manager/issues
author = Bradley Reimers
author_email = bradley@introspectdata.com
license = MIT
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.0
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: HTTP Servers
	Topic :: Internet :: WWW/HTTP :: Site Management

[options]
include_package_data = true
packages = find:
install_requires = 
	django_extensions
	drf-yasg
	djangorestframework
	kubernetes

[pep8]
count = False
ignore = E226,E302,E41
max-line-length = 160
statistics = True

[bumpversion:file:kubernetes_manager/__init__.py]

[bumpversion:file:setup.py]

[bumpversion:file:README.rst]

